--- a/WFCORE-488/pom.xml
+++ b/WFCORE-488/pom.xml
@@ -2,18 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
+
     <groupId>org.jboss.bugs.wfcore488</groupId>
     <artifactId>wfcore488</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    
+
     <name>WFCORE-488: WFCORE-488 Parent Aggregator</name>
 
     <prerequisites>
         <maven>3.2.0</maven>
     </prerequisites>
-    
+
     <properties>
         <!-- Global code compiler settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -338,4 +338,10 @@
             </plugins>
         </pluginManagement>
     </build>
+
+    <modules>
+        <module>lib</module>
+        <module>ejb</module>
+        <module>war</module>
+    </modules>
 </project>
