--- a/WFCORE-488/pom.xml
+++ b/WFCORE-488/pom.xml
@@ -21,16 +21,16 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
         <!-- Maven Plugin Versions  -->
-        <ver.plugin.surefire>2.18</ver.plugin.surefire>
+        <ver.plugin.surefire>2.18.1</ver.plugin.surefire>
         <ver.plugin.javadoc>2.9.1</ver.plugin.javadoc>
         <ver.plugin.compiler>3.2</ver.plugin.compiler>
         <ver.plugin.ear>2.9</ver.plugin.ear>
-        <ver.plugin.ejb>2.3</ver.plugin.ejb>
-        <ver.plugin.war>2.4</ver.plugin.war>
+        <ver.plugin.ejb>2.4</ver.plugin.ejb>
+        <ver.plugin.war>2.5</ver.plugin.war>
         <ver.plugin.build-helper>1.8</ver.plugin.build-helper>
         <ver.plugin.wildfly-maven>1.0.3.Final-SNAPSHOT</ver.plugin.wildfly-maven>
-        <ver.plugin.failsafe>2.18</ver.plugin.failsafe>
-        <ver.plugin.antrun>1.7</ver.plugin.antrun>
+        <ver.plugin.failsafe>2.18.1</ver.plugin.failsafe>
+        <ver.plugin.antrun>1.8</ver.plugin.antrun>
         <ver.plugin.dependency>2.8</ver.plugin.dependency>
         <ver.plugin.maven-clean>2.6.1</ver.plugin.maven-clean>
         <ver.plugin.maven-dependency>2.9</ver.plugin.maven-dependency>
@@ -46,29 +46,22 @@
         <!-- Dependency Versions -->
         <!-- WildFly Versions -->
         <ver.dep.wildfly>8.2.0.Final</ver.dep.wildfly>
-        <ver.dep.jboss-ejb3>2.1.0</ver.dep.jboss-ejb3>
+        <ver.dep.javaee>1.0.2.Final</ver.dep.javaee>
         <!-- Arquillian -->
         <ver.dep.arquillian>1.1.5.Final</ver.dep.arquillian>
         <ver.dep.shrinkwrap.resolver>2.1.1</ver.dep.shrinkwrap.resolver>
-        <ver.dep.arquillian.container-domain-remote>1.0.0.Alpha2</ver.dep.arquillian.container-domain-remote>
-        <ver.dep.maven.aether>3.0.5</ver.dep.maven.aether>
-        <ver.dep.mockito>1.9.5</ver.dep.mockito>
+        <ver.dep.arquillian.container-domain-remote>1.0.0.Alpha4</ver.dep.arquillian.container-domain-remote>
+        <ver.dep.mockito>1.10.17</ver.dep.mockito>
+        <ver.dep.junit>4.11</ver.dep.junit>
         <ver.dep.arquillian.suite>1.1.1</ver.dep.arquillian.suite>
     </properties>
     <dependencyManagement>
         <dependencies>
             <!-- POM Imports -->
             <dependency>
-                <groupId>org.wildfly.bom</groupId>
-                <artifactId>jboss-javaee-7.0-with-all</artifactId>
-                <version>${ver.dep.wildfly}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.wildfly</groupId>
-                <artifactId>wildfly-ejb-client-bom</artifactId>
-                <version>${ver.dep.wildfly}</version>
+                <groupId>org.jboss.shrinkwrap.resolver</groupId>
+                <artifactId>shrinkwrap-resolver-bom</artifactId>
+                <version>${ver.dep.shrinkwrap.resolver}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -79,51 +72,23 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!-- Provided Dependencies -->
             <dependency>
-                <groupId>org.wildfly</groupId>
-                <artifactId>wildfly-clustering-api</artifactId>
+                <groupId>org.wildfly.bom</groupId>
+                <artifactId>jboss-javaee-7.0-with-all</artifactId>
                 <version>${ver.dep.wildfly}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- POM Dependencies -->
+            <dependency>
+                <groupId>org.jboss.spec</groupId>
+                <artifactId>jboss-javaee-7.0</artifactId>
+                <version>${ver.dep.javaee}</version>
+                <type>pom</type>
                 <scope>provided</scope>
             </dependency>
-            <dependency>
-                <groupId>org.jboss.ejb3</groupId>
-                <artifactId>jboss-ejb3-ext-api</artifactId>
-                <version>${ver.dep.jboss-ejb3}</version>
-                <scope>provided</scope>
-            </dependency>
-            <!-- Runtime Dependencies -->
-            <dependency>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
-                <version>${ver.dep.log4j}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava</artifactId>
-                <version>${ver.dep.guava}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.bouncycastle</groupId>
-                <artifactId>bcprov-jdk15on</artifactId>
-                <version>${ver.dep.bcprov}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.bouncycastle</groupId>
-                <artifactId>bcpkix-jdk15on</artifactId>
-                <version>${ver.dep.bcprov}</version>
-            </dependency>
-            <dependency>
-                <groupId>net.schmizz</groupId>
-                <artifactId>sshj</artifactId>
-                <version>${ver.dep.sshj}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.slf4j</groupId>
-                        <artifactId>slf4j-api</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
+
             <!-- Test Dependencies -->
             <dependency>
                 <groupId>junit</groupId>
@@ -132,15 +97,21 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.wildfly.arquillian</groupId>
-                <artifactId>wildfly-arquillian-container-domain-remote</artifactId>
-                <version>${ver.dep.arquillian.container-domain-remote}</version>
+                <groupId>org.jboss.arquillian.junit</groupId>
+                <artifactId>arquillian-junit-container</artifactId>
+                <version>${ver.dep.arquillian}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.jboss.arquillian.extension</groupId>
-                <artifactId>arquillian-jacoco</artifactId>
-                <version>${ver.dep.arquillian.jacoco}</version>
+                <groupId>org.jboss.arquillian.protocol</groupId>
+                <artifactId>arquillian-protocol-servlet</artifactId>
+                <version>${ver.dep.arquillian}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.wildfly.arquillian</groupId>
+                <artifactId>wildfly-arquillian-container-domain-remote</artifactId>
+                <version>${ver.dep.arquillian.container-domain-remote}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -155,11 +126,11 @@
                 <version>${ver.dep.arquillian.suite}</version>
                 <scope>test</scope>
             </dependency>
-            <!--  the explicit aether dependency resolves a conflict between wildfly and  shrinkwrap-->
             <dependency>
-                <groupId>org.apache.maven</groupId>
-                <artifactId>maven-aether-provider</artifactId>
-                <version>${ver.dep.maven.aether}</version>
+                <groupId>org.jboss.shrinkwrap.resolver</groupId>
+                <artifactId>shrinkwrap-resolver-depchain</artifactId>
+                <version>${ver.dep.shrinkwrap.resolver}</version>
+                <type>pom</type>
                 <scope>test</scope>
             </dependency>
         </dependencies>
@@ -270,6 +241,33 @@
                     <artifactId>maven-antrun-plugin</artifactId>
                     <version>${ver.plugin.antrun}</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.wildfly.plugins</groupId>
+                    <artifactId>wildfly-maven-plugin</artifactId>
+                    <version>${ver.plugin.wildfly-maven}</version>
+                    <executions>
+                        <execution>
+                            <id>reset-environment</id>
+                            <phase>none</phase>
+                            <goals>
+                                <goal>undeploy</goal>
+                            </goals>
+                            <configuration>
+                                <ignoreMissingDeployment>true</ignoreMissingDeployment>
+                                <matchPattern>.*</matchPattern>
+                                <matchPatternStrategy>all</matchPatternStrategy>
+                            </configuration>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <domain>
+                            <server-groups>
+                                <server-group>primary-clustered</server-group>
+                            </server-groups>
+                        </domain>
+                    </configuration>
+                </plugin>
+                
                 <!-- This plugin's configuration is used to store Eclipse m2e settings
                     only. It has no influence on the Maven build itself. -->
                 <plugin>
