Missing ejb module

--- a/scenario4/pom.xml
+++ b/scenario4/pom.xml
@@ -15,5 +15,6 @@
     <modules>
         <module>war</module>
         <module>ear</module>
+        <module>ejb</module>
     </modules>
 </project>
