--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,43 @@
                 <version>${ver.dep.picketlink}</version>
                 <scope>provided</scope>
             </dependency>
+        <!-- PicketLink Dependency -->
+            <dependency>
+                <groupId>org.picketlink</groupId>
+                <artifactId>picketlink-api</artifactId>
+                <version>${ver.dep.picketlink}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.picketlink</groupId>
+                <artifactId>picketlink-impl</artifactId>
+                <version>${ver.dep.picketlink}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.picketlink</groupId>
+                <artifactId>picketlink-common</artifactId>
+                <version>${ver.dep.picketlink}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.picketlink</groupId>
+                <artifactId>picketlink-idm-api</artifactId>
+                <version>${ver.dep.picketlink}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.picketlink</groupId>
+                <artifactId>picketlink-idm-impl</artifactId>
+                <version>${ver.dep.picketlink}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.picketlink</groupId>
+                <artifactId>picketlink-idm-simple-schema</artifactId>
+                <version>${ver.dep.picketlink}</version>
+                <scope>provided</scope>
+            </dependency>
             <dependency>
                 <groupId>org.wildfly.bom</groupId>
                 <artifactId>jboss-javaee-7.0-with-all</artifactId>
