--- a/scenario4/ear/pom.xml
+++ b/scenario4/ear/pom.xml
@@ -19,6 +19,12 @@
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
+        <dependency>
+            <groupId>plink666</groupId>
+            <artifactId>scenario4-ejb</artifactId>
+            <version>${project.version}</version>
+            <type>ejb</type>
+        </dependency>
     </dependencies>
 
     <build>
