--- a/scenario4/ear/pom.xml
+++ b/scenario4/ear/pom.xml
@@ -19,11 +19,17 @@
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>plink666</groupId>
             <artifactId>scenario4-ejb</artifactId>
             <version>${project.version}</version>
             <type>ejb</type>
+        </dependency> -->
+        <dependency>
+            <groupId>plink666</groupId>
+            <artifactId>scenario4-lib</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 
@@ -38,6 +44,10 @@
                     <fileNameMapping>no-version</fileNameMapping>
                     <initializeInOrder>true</initializeInOrder>
                     <modules>
+                    <jarModule>
+                            <groupId>plink666</groupId>
+                            <artifactId>scenario4-lib</artifactId>
+                        </jarModule>
                         <webModule>
                             <groupId>plink666</groupId>
                             <artifactId>scenario4-war</artifactId>
